// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegExp > crossSerialize > scoped > supports RegExp 1`] = `"($R=>$R[0]=/[a-z0-9]+/i)($R["example"])"`;

exports[`RegExp > crossSerialize > supports RegExp 1`] = `"$R[0]=/[a-z0-9]+/i"`;

exports[`RegExp > crossSerializeAsync > scoped > supports RegExp 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=/[a-z0-9]+/i))($R["example"])"`;

exports[`RegExp > crossSerializeAsync > supports RegExp 1`] = `"$R[0]=Promise.resolve($R[1]=/[a-z0-9]+/i)"`;

exports[`RegExp > crossSerializeStream > scoped > supports RegExp 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`RegExp > crossSerializeStream > scoped > supports RegExp 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=/[a-z0-9]+/i))($R["example"])"
`;

exports[`RegExp > crossSerializeStream > supports RegExp 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`RegExp > crossSerializeStream > supports RegExp 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=/[a-z0-9]+/i)"
`;

exports[`RegExp > serialize > supports RegExp 1`] = `"/[a-z0-9]+/i"`;

exports[`RegExp > serializeAsync > supports RegExp 1`] = `"Promise.resolve(/[a-z0-9]+/i)"`;

exports[`RegExp > toCrossJSON > supports RegExp 1`] = `"{"t":6,"i":0,"c":"[a-z0-9]+","m":"i"}"`;

exports[`RegExp > toCrossJSONAsync > supports RegExp 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":6,"i":1,"c":"[a-z0-9]+","m":"i"}}"`;

exports[`RegExp > toCrossJSONStream > supports RegExp 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`RegExp > toCrossJSONStream > supports RegExp 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":6,"i":3,"c":"[a-z0-9]+","m":"i"}]}"`;

exports[`RegExp > toJSON > supports RegExp 1`] = `"{"t":{"t":6,"i":0,"c":"[a-z0-9]+","m":"i"},"f":31,"m":[]}"`;

exports[`RegExp > toJSONAsync > supports RegExp 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":6,"i":1,"c":"[a-z0-9]+","m":"i"}},"f":31,"m":[]}"`;
